[gd_scene load_steps=13 format=3 uid="uid://b0tv17ivqoc1f"]

[ext_resource type="Script" path="res://minijeu_4/clothe_game.gd" id="1_f3607"]
[ext_resource type="Texture2D" uid="uid://dujr2crumufmu" path="res://minijeu_4/figures/background.png" id="2_aoaif"]
[ext_resource type="Texture2D" uid="uid://blls7iw0ckhx0" path="res://minijeu_4/figures/short.png" id="3_hxc67"]
[ext_resource type="Texture2D" uid="uid://dw1jusfve4qs4" path="res://minijeu_4/figures/pant.png" id="4_gk1vg"]
[ext_resource type="Texture2D" uid="uid://dbl5ved5lfs43" path="res://minijeu_4/figures/sunglass.png" id="5_i2utt"]
[ext_resource type="Texture2D" uid="uid://616s10c3y13" path="res://minijeu_4/figures/protectglass.png" id="6_jsthp"]
[ext_resource type="Texture2D" uid="uid://cabfsjcu53tnc" path="res://minijeu_4/figures/blouse.png" id="7_opqof"]
[ext_resource type="Texture2D" uid="uid://t8majx4k8rot" path="res://minijeu_4/figures/tee-shirt.png" id="8_jxnck"]
[ext_resource type="Texture2D" uid="uid://dtedajirremra" path="res://minijeu_4/figures/shoes.png" id="9_q8fy6"]
[ext_resource type="Texture2D" uid="uid://crfm1dnmt2ndt" path="res://minijeu_4/figures/open_shoes.png" id="10_jii2g"]
[ext_resource type="Texture2D" uid="uid://dxnieh5byuujx" path="res://minijeu_4/figures/mask.png" id="11_ao0ka"]
[ext_resource type="Texture2D" uid="uid://cypnaiy1v6rdn" path="res://minijeu_4/figures/carnaval.png" id="12_sgrsq"]

[node name="clothe_Game" type="Node"]
script = ExtResource("1_f3607")

[node name="BackGround" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="body" type="Area2D" parent="."]
position = Vector2(483.6, 299.4)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="body"]
texture = ExtResource("2_aoaif")

[node name="p" type="Button" parent="body"]
show_behind_parent = true
offset_left = 272.0
offset_top = -364.0
offset_right = 506.0
offset_bottom = 180.0

[node name="short" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("3_hxc67")

[node name="sho" type="Button" parent="body"]
show_behind_parent = true
offset_left = 218.0
offset_top = 296.0
offset_right = 454.0
offset_bottom = 456.0

[node name="pant" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("4_gk1vg")

[node name="sunglass" type="Button" parent="body"]
show_behind_parent = true
offset_left = -822.0
offset_top = -376.0
offset_right = -598.0
offset_bottom = -266.0

[node name="sunglasses" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("5_i2utt")

[node name="pglass" type="Button" parent="body"]
show_behind_parent = true
offset_left = -534.0
offset_top = -370.0
offset_right = -342.0
offset_bottom = -260.0

[node name="protectglass" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("6_jsthp")

[node name="b" type="Button" parent="body"]
show_behind_parent = true
offset_left = -864.0
offset_top = -232.0
offset_right = -508.0
offset_bottom = 452.0

[node name="blouse" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("7_opqof")

[node name="t" type="Button" parent="body"]
show_behind_parent = true
offset_left = -500.0
offset_top = -208.0
offset_right = -222.0
offset_bottom = 276.0

[node name="teeshirt" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("8_jxnck")

[node name="s" type="Button" parent="body"]
show_behind_parent = true
offset_left = 560.0
offset_top = -354.0
offset_right = 854.0
offset_bottom = -116.0

[node name="shoes" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("9_q8fy6")

[node name="pensho" type="Button" parent="body"]
show_behind_parent = true
offset_left = 492.0
offset_top = 276.0
offset_right = 704.0
offset_bottom = 486.0

[node name="openshoes" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("10_jii2g")

[node name="m" type="Button" parent="body"]
show_behind_parent = true
offset_left = 638.0
offset_top = 132.0
offset_right = 812.0
offset_bottom = 258.0

[node name="mask" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("11_ao0ka")

[node name="c" type="Button" parent="body"]
show_behind_parent = true
offset_left = 588.0
offset_top = -92.0
offset_right = 860.0
offset_bottom = 84.0

[node name="carnaval" type="Sprite2D" parent="body"]
visible = false
texture = ExtResource("12_sgrsq")

[node name="TEXT" type="CanvasLayer" parent="."]

[node name="time" type="Label" parent="TEXT"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -355.0
offset_top = -1.0
offset_right = -37.0
offset_bottom = 139.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 200
horizontal_alignment = 2

[node name="win_state" type="Label" parent="TEXT"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -35.5
offset_right = 75.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Button2" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.5
offset_top = -65.0
offset_right = 61.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -279.0
offset_right = 277.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
min_value = -5.0
max_value = 5.0
step = 1.0

[node name="Button3" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
text = "to menu"

[node name="Label" type="Label" parent="Button3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "coins :"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="body/p" to="." method="_on_p_pressed"]
[connection signal="pressed" from="body/sho" to="." method="_on_sho_pressed"]
[connection signal="pressed" from="body/sunglass" to="." method="_on_sunglass_pressed"]
[connection signal="pressed" from="body/pglass" to="." method="_on_pglass_pressed"]
[connection signal="pressed" from="body/b" to="." method="_on_b_pressed"]
[connection signal="pressed" from="body/t" to="." method="_on_t_pressed"]
[connection signal="pressed" from="body/s" to="." method="_on_s_pressed"]
[connection signal="pressed" from="body/pensho" to="." method="_on_pensho_pressed"]
[connection signal="pressed" from="body/m" to="." method="_on_m_pressed"]
[connection signal="pressed" from="body/c" to="." method="_on_c_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
